<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="6dp"
    app:cardCornerRadius="6dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/nama"
            android:textColor="@color/hitam"/>
        <EditText
            android:id="@+id/etext_nmkangcukur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isikan_nama" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/no_hp"
            android:textColor="@color/hitam"/>
        <EditText
            android:id="@+id/etext_nomorhp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isikan_nomor_hp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/lokasi"
            android:textColor="@color/hitam"/>
        <EditText
            android:id="@+id/etext_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isikan_lokasi" />
        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/simpan"
            android:textColor="#fff"
            android:background="@drawable/button"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>