<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeKangCukur"
    android:layout_margin="8dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/hitam"/>
        <TextView
            android:id="@+id/tv_namaKangcukur"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="pandawa"
            android:background="@drawable/textview_stroke"
            android:paddingLeft="8dp"
            android:paddingVertical="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/no_hp"
                android:textColor="@color/hitam"/>
            <TextView
                android:id="@+id/tv_nomorhp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="08xxxxxxxx"
                android:background="@drawable/textview_stroke"
                android:paddingStart="8dp"
                android:paddingVertical="4dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_antrian"
                android:textColor="@color/hitam"/>
            <TextView
                android:id="@+id/tv_jmlantrian"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="16"
                android:background="@drawable/textview_stroke"
                android:paddingLeft="8dp"
                android:paddingVertical="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textColor="@color/hitam"/>
            <TextView
                android:id="@+id/tv_lokasi"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="17625,876'LS 5674,12'LU"
                android:background="@drawable/textview_stroke"
                android:paddingStart="8dp"
                android:paddingVertical="4dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_lihatantrian"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/merah"
                android:text="@string/lihat_antrian"/>
            <TextView
                android:id="@+id/tv_lihatpeta"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/merah"
                android:gravity="center"
                android:text="@string/lihat_peta"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>